# parallel-templat

./: CMakeLists.txt  README.md  run
src/parallel_executor/: CMakeLists.txt  DataEvent.h  DeviceA.h  DeviceB.h  DeviceEvent.h  EventQueue.h  Parser.h  StartedEvent.h  WorkDoneEvent.h
src/parallel_executor/src/: DataEvent.cpp  Device.cpp  Device.h  DeviceA.cpp  DeviceB.cpp  DeviceEvent.cpp  Event.cpp  Event.h  EventQueue.cpp  Parser.cpp  Parser.h  StartedEvent.cpp  WorkDoneEvent.cpp  WorkDoneEvent.h  main.cpp
test/: CMakeLists.txt  Test_Devices.cpp  Test_EventQueue.cpp  Test_Events.cpp  Test_Parser.cpp
